src/test/ui/traits/inductive-overflow/two-traits.stderr
error[E0275]: overflow evaluating the requirement `T: Magic`
  --> $DIR/two-traits.rs:10:16
   |
LL | impl<T: Magic> Magic for T {
   |                ^^^^^
   |
   = help: consider adding a `#![recursion_limit="256"]` attribute to your crate (`two_traits`)
note: required because of the requirements on the impl of `Magic` for `T`
  --> $DIR/two-traits.rs:10:16
   |
LL | impl<T: Magic> Magic for T {
   |                ^^^^^     ^
   = note: 127 redundant requirements hidden
   = note: required because of the requirements on the impl of `Magic` for `T`
note: required by a bound in `Magic`
  --> $DIR/two-traits.rs:7:1
   |
LL | pub trait Magic {
   | ^^^^^^^^^^^^^^^ required by this bound in `Magic`

error[E0275]: overflow evaluating the requirement `T: Magic`
  --> $DIR/two-traits.rs:17:14
   |
LL | fn wizard<T: Magic>() { check::<<T as Magic>::X>(); }
   |              ^^^^^
   |
   = help: consider adding a `#![recursion_limit="256"]` attribute to your crate (`two_traits`)
note: required because of the requirements on the impl of `Magic` for `T`
  --> $DIR/two-traits.rs:10:16
   |
LL | impl<T: Magic> Magic for T {
   |                ^^^^^     ^
   = note: 127 redundant requirements hidden
   = note: required because of the requirements on the impl of `Magic` for `T`
note: required by a bound in `Magic`
  --> $DIR/two-traits.rs:7:1
   |
LL | pub trait Magic {
   | ^^^^^^^^^^^^^^^ required by this bound in `Magic`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0275`.
